--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7bb8a6d463.js" crossorigin="anonymous"></script>
-    <title>Your Page Title</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS stylesheet -->
-    <link rel="icon" type="image/png" href="favicon.png"> <!-- Link to your website favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png"> <!-- Link to your website favicon -->
+        <title>Portfolio</title>
 </head>
 <body>
     <!-- Your page content goes here -->
+    
+
 </body>
 </html>
