added social media icons

--- a/index.html
+++ b/index.html
@@ -12,20 +12,32 @@
     <script
       src="https://kit.fontawesome.com/7bb8a6d463.js"
       crossorigin="anonymous"
-    ></script> 
-      <!--  CSS stylesheet -->
+    ></script>
+    <!--  CSS stylesheet -->
     <link rel="stylesheet" href="styles.css" />
-     <!-- Link  favicon -->
+    <!-- Link  favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png" />
     <title>Portfolio</title>
   </head>
   <body>
     <!-- main content -->
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut omnis et
-      praesentium mollitia nisi obcaecati asperiores saepe dicta repellendus
-      animi explicabo quos consectetur, ipsa quis quidem aspernatur perspiciatis
-      voluptate aperiam.
-    </p>
+    <header class="header">
+      <nav>
+        <a href="/">M.Perez </a>
+        <a href="www.github.com"><i class="fa-brands fa-github"></i></a>
+        <a href="www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
+        <a href="www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="www.linkedin.com"><i class="fa-brands fa-whatsapp"></i></a>
+
+      </nav>
+    </header>
+
+    <main class="main">
+      <div class="wrapper">
+        <h1>Hello there, I'm Martin Perez</h1>
+      </div>
+    </main>
+
+    <footer class="footer"></footer>
   </body>
 </html>
